[metadata]
name = suit
version = 0.1.0
author = R. Douglas G. Aquino
author_email = aquinordga@gmail.com
description = suit: Some Useful and Interesting Tools 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://aquinordg.github.io/rdga_4k/
project_urls =
    Bug Tracker = https://github.com/aquinordg/suit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    numpy
	PuLP
	
[options.packages.find]
where = src
